fix: replace hardcoded spacing values with CSS variables for improved consistency in footer styles

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -28,7 +28,7 @@
 
         @include mobile-l {
             @include flex-col;
-            row-gap: 16px;
+            row-gap: var(--gap);
         }
     }
 
@@ -37,7 +37,7 @@
 
         &-list {
             @include flex-row;
-            column-gap: 16px;
+            column-gap: var(--gap);
 
             @include laptop {
                 @include flex-col;
@@ -45,14 +45,14 @@
             }
 
             @include mobile-l {
-                row-gap: 16px;
+                row-gap: var(--gap);
             }
         }
 
         &-item {
             display: flex;
             flex-direction: column;
-            row-gap: 16px;
+            row-gap: var(--gap);
             width: clamp(140px, calc((267/ 1920) * 100vw), 267px);
 
             &>.item__link {
@@ -68,7 +68,7 @@
                 font-size: 1.5rem;
                 font-weight: 500;
                 text-transform: uppercase;
-                margin-bottom: 16px;
+                margin-bottom: var(--gap);
 
                 @include laptop-l {
                     margin-bottom: 8px;
@@ -77,7 +77,7 @@
         }
 
         @include mobile-l {
-            margin-bottom: 16px;
+            margin-bottom: var(--gap);
         }
     }
 
@@ -91,7 +91,7 @@
 
         &-item {
             @include flex-row;
-            column-gap: clamp(8px, 5.76vw, 16px);
+            column-gap: clamp(8px, 5.76vw, var(--gap));
         }
     }
 
